# tauri2-temp

./: CHANGELOG.md  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: deploy-pages.yml  deploy.yml  publish.yml
public/: qq.txt
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/styles/: animation.scss  theme.scss
src/config/: index.js
src/helper/: system.js  updater.js
src/layouts/: index.vue
src/layouts/assets/: var.scss
src/layouts/components/: Brand.vue  Language.vue  SideNav.vue  TitleBar.vue  Updater.vue
src/layouts/components/Settings/: index.vue
src/layouts/components/Settings/components/: About.vue  General.vue
src/locales/: en-US.js  index.js  zh-CN.js
src/plugins/directives/: clickOutside.js  index.js
src/plugins/setup/: index.js
src/router/: index.js
src/views/: Console.vue  DeviceList.vue  TodayTodo.vue
