[package]
name = "tauri2-temp"
version = "1.0.1"
description = "tauri2基础模版"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_project_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"
tauri-plugin-process= "2"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-updater = { version = "2", features = ["rustls-tls", "zip"] }
